# AOC_2025

./: .gitignore  CMakeLists.txt  Makefile
Day1/: Day1Part1.c  Day1Part2.c
Day2/: Day2Part1.c  Day2Part2.c
Day3/: Day3Part1.c  Day3Part2.c
Day4/: Day4Part1.c  Day4Part2.c
Day5/: Day5Part1.c  Day5Part2.c
